make path a stack and remove parentParent...Element vars
Calling .get(N) on the list so often may be seen as ineffizient.
But this code is not really performance critical and the JVM might
even remember the values.